modified new line

--- a/index.html
+++ b/index.html
@@ -2,13 +2,5 @@
 	"hello World"
 	"i love  telanga india"
 
-	football
-	cricket
-	tenins
-	hocky
-	cricket 
-	hockey
-	tennis
-	football
-
+       india love cricket 
 </html>
